Fixed menu collapse bug and added a simplae animation function

--- a/intros/styles.css
+++ b/intros/styles.css
@@ -46,7 +46,7 @@ body{
     left: 0; 
     padding-right: 20px;
     padding-left:20px;
-    padding-top: 0px;
+    padding-top: 5px;
     margin:none;
  }
  #mainCanvas.fullscreen{
